# hyperwhip

./: .gitignore  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/hyperherd-config/: SKILL.md
.claude/skills/hyperwhip-config/: SKILL.md
.github/workflows/: docs.yml  publish.yml
docs/: claude-skill.md  commands.md  conditions.md  configuration.md  discord-setup.md  example.md  getting-started.md  index.md  launcher.md  monitor.md  results.md  setup-help.md  workspace.md
examples/: sample_axes.yaml  sample_config.yaml
examples/mnist_training/: README.md  hyperherd.yaml  hyperwhip.yaml  launch.sh  pyproject.toml  train.py
examples/mnist_training/configs/: config.yaml
examples/mock_training/: README.md  hyperwhip.yaml  launch.sh  train.py
examples/mock_training/configs/: config.yaml
hyperherd/: __init__.py  __main__.py  agent_output.py  cli.py  config.py  constraints.py  display.py  expr.py  init.py  logging.py  manifest.py  preflight.py  search.py  slurm.py  watch.py
hyperherd/integrations/: __init__.py  lightning.py
hyperherd/monitor_agent/: __init__.py  commands.py  daemon.py  plots.py  state.py  tick.py  tools.py
hyperherd/monitor_agent/channel/: __init__.py  discord_channel.py
hyperherd/monitor_agent/event_source/: __init__.py  slurm.py
hyperherd/monitor_agent/prompt/: __init__.py  monitor.md
hyperherd/skill/: SKILL.md
hyperherd/skills/hyperherd-config/: SKILL.md
hyperherd/skills/hyperherd-monitor/: SKILL.md
hyperwhip/: __init__.py  cli.py  config.py  display.py  init.py  logging.py  manifest.py  preflight.py  slurm.py
tests/: test_agent_output.py  test_cli_monitor.py  test_cli_stats.py  test_cli_stop.py  test_config.py  test_constraints.py  test_display.py  test_expr.py  test_expr_integration.py  test_init.py  test_integrations_lightning.py  test_logging.py  test_manifest.py  test_monitor_agent_channel.py  test_monitor_agent_chat_history.py  test_monitor_agent_commands.py  test_monitor_agent_daemon.py  test_monitor_agent_slurm_poll.py  test_preflight.py  test_search.py  test_slurm.py  test_watch.py
