[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"


[project]
name = "hyperherd"
version = "0.1.0"
description = "Launch and monitor hyperparameter optimization job arrays on SLURM"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyyaml", "pydantic>=2.0"]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]
monitor = [
    "claude-agent-sdk>=0.1",
    "discord.py>=2.4",
    "ruamel.yaml>=0.18",   # round-trips comments when we edit hyperherd.yaml
]

[project.scripts]
herd = "hyperherd.cli:main"

[tool.setuptools.packages.find]
include = ["hyperherd*"]

[tool.setuptools.package-data]
hyperherd = [
    "skills/*/SKILL.md",
    "monitor_agent/prompt/*.md",
]