[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name = "hyperherd"
dynamic = ["version"]
description = "Launch and monitor hyperparameter optimization job arrays on SLURM"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pyyaml", "pydantic>=2.0"]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]
lightning = [
    "lightning>=2.0",
]
monitor = [
    # The agent SDK + Discord client require Python ≥ 3.10. We gate the
    # whole [monitor] extras group on that marker so older Python envs
    # (e.g. trial-side conda envs running PyTorch on the cluster) can
    # `pip install hyperherd` without uv's universal resolver choking
    # on the unsatisfiable upper-bound from claude-agent-sdk.
    "claude-agent-sdk>=0.1; python_version >= '3.10'",
    "discord.py>=2.4; python_version >= '3.10'",
    "ruamel.yaml>=0.18",   # round-trips comments when we edit hyperherd.yaml
    "matplotlib>=3.5",     # /plot, post_plot, auto-plot on completion/failure
]

[project.scripts]
herd = "hyperherd.cli:main"

[tool.setuptools.packages.find]
include = ["hyperherd*"]

[tool.setuptools.package-data]
hyperherd = [
    "skills/*/SKILL.md",
    "monitor_agent/prompt/*.md",
]

# Version is derived from git tags. A tagged commit (e.g. `v0.1.0`)
# produces version `0.1.0`; untagged commits get a dev version like
# `0.1.1.dev3+g4567abc`. The version is also written to a Python file
# at build time so runtime code can `from hyperherd._version import
# __version__` if needed. The file is generated, not committed —
# .gitignore excludes it.
[tool.setuptools_scm]
version_file = "hyperherd/_version.py"
# Map git tag `v0.1.0` -> PyPI version `0.1.0`.
tag_regex = "^v(?P<version>[0-9]+\\.[0-9]+\\.[0-9]+(?:[a-z0-9.-]*)?)$"